# Gerador-de-Relatorio

./: .gitignore  INICIO_RAPIDO.md  README.md  STATUS_IMPLEMENTACAO.md  VERIFICACAO.md  package-lock.json  package.json  start.sh
backend/: .env  .gitignore  Dockerfile  Makefile  QUICK_REFERENCE.txt  README.md  README_V2.md  activate-venv.bat  activate-venv.sh  docker-compose.yml  inspect_json.py  pyproject.toml  requirements.txt  run_tests_and_upload.py  test_denormalize_inplace.py  test_normalize.py  verify_rebuild.py
backend/app/: __init__.py  application.py
backend/config/: __init__.py  settings.py
backend/data/: EXTRATO_CLIENTE_HISTORICO.json
backend/docs/: ARCHITECTURE.md  COMECE_AQUI.md  DOCUMENTACAO_COMPLETA_V2.md  GUIA_VENV.md  MAPA_NAVEGACAO.md  NORMALIZACAO_EXTRATO.md
backend/scripts/: check_denorm_columns.py  check_table_structure.py  cleanup_extra_tables.py  denormalize_in_place.py  denormalize_inplace.py  full_denormalize.py  hybrid_denormalize.py  main.py  migrate_denormalize_existing.py  normalize_extrato.py  rebuild_tables_correct_denorm.py  rebuild_tables_smart_denorm.py  requirements.txt  select_and_upload.py  upload_history.py  upload_with_denormalization.py
backend/templates/: 00_LEIA_PRIMEIRO.txt  DEBUG_URL.py  DENORMALIZACAO_RESUMO.md  DIAGNOSTICO_MYSQL.py  ENTREGA_FINAL.md  EXECUTAR_DENORMALIZACAO.py  GUIA_RAPIDO.txt  INDICE_COMPLETO.md  LEIA-RESULTADO-VALIDACAO.md  LIMPAR_E_EXPANDIR.py  PROVA_FUNCIONAMENTO.py  PROVA_SIMPLES.py  PROVA_VENV_OBRIGATORIA.py  RELATORIO_FINAL.py  RESUMO_EXECUTIVO.txt  STATUS_NORMALIZACAO.md  (+3 more)
frontend/: .env  (+2 more)
(+60 files in other folders)
